# magic-trace

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .ocamlformat  Makefile  README.md  dune  magic-trace.opam  magic-trace.opam.locked  test_kernel_capabilities.ml
.github/: bug.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml
.github/workflows/: build-deb.yml  build.yml
core/: backend_intf.ml  collection_mode.ml  collection_mode.mli  decode_result.ml  decode_result.mli  demangle_ocaml_symbols.ml  demangle_ocaml_symbols.mli  dune  elf.ml  elf.mli  elf_intf.ml  env_vars.ml  env_vars.mli  errno.ml  event.ml  event.mli  ocaml_exception_info.ml  ocaml_exception_info.mli  perf_map.ml  perf_map.mli  perf_map_location.ml  perf_map_location.mli  perf_raw_sample.ml  perf_raw_sample.mli  symbol.ml  symbol.mli  symbol_selection.ml  symbol_selection.mli  timer_resolution.ml  timer_resolution.mli  trace_filter.ml  trace_mode.ml  trace_mode.mli  trace_scope.ml  trace_scope.mli  trace_state_change.ml  trace_state_change.mli  util.ml  util.mli  when_to_snapshot.ml  (+1 more)
debian/: changelog  control  rules
demo/: README.md  demo.c  demo.cpp  demo.go  demo.js  demo.ml  java
demo/csharp/: Program.cs  run.sh
direct_backend/: README.md  decoding.ml  decoding.mli  decoding_stubs.c  dune  import.ml  magic_trace_direct_backend.ml  magic_trace_direct_backend.mli  manual_perf.ml  manual_perf.mli  manual_perf_stubs.c
direct_backend/cinaps/: dune  trace_decoding_interop.ml  trace_decoding_interop.mli
docs/: tutorial.md
docs/assets/: example.mov
lib/fzf/: README.md  fzf.opam
lib/fzf/src/: fzf.ml
lib/magic_trace/: README.md
lib/magic_trace/src/: magic_trace.mli  stop_stubs.c
lib/ocaml-probes/: README.md  ocaml-probes.opam
lib/ocaml-probes/lib/: dune  elf.ml  elf.mli  mmap.ml  mmap.mli  probes_lib.ml  probes_lib.mli  stubs.c  wrap.h
lib/owee/: CHANGES  LICENSE  LICENSE.interval-tree  README.md  dune-project  owee.opam
lib/owee/examples/: Makefile  decodedline_elf.ml  decodedline_macho.ml  dune  functions.ml  locate.ml  read_buildid.ml  read_stapsdt_probes.ml
lib/owee/src/: LICENSE  dune  owee_buf.ml  owee_buf.mli  owee_debug_line.ml  owee_debug_line.mli  owee_elf.ml  owee_elf.mli  owee_elf_notes.ml  owee_elf_notes.mli  owee_form.ml  owee_form.mli  owee_graph.ml  owee_interval_tree.ml  owee_interval_tree.mli  owee_linux_maps.ml  owee_linux_maps.mli  owee_location.ml  owee_location.mli  owee_macho.ml  owee_macho.mli  owee_marker.ml  owee_marker.mli  owee_stubs.c  owee_traverse.ml  owee_traverse.mli
lib/src/: dune  magic_trace.ml  magic_trace.mli
lib/test/: dune  import.ml
lib/tracing/: tracing.opam
lib/tracing/demo/: tracing_demo.ml
lib/tracing/src/: flow.mli  parser.ml  parser.mli  record_writer.ml  record_writer.mli  tool_output.mli  trace.ml  trace.mli  trace_intf.ml  util.ml  util.mli
lib/tracing/zero/: destinations.mli  dune  tracing_zero.ml  writer.ml  writer_intf.ml
src/: backend_intf.ml  boot_time.ml  boot_time.mli  boot_time_stubs.c  breakpoint.ml  breakpoint.mli  breakpoint_stubs.c  callgraph_mode.ml  callgraph_mode.mli  callstack_compression.ml  callstack_compression.mli  capability.ml  capability.mli  collection_mode.ml  collection_mode.mli  decode_result.mli  demangle_ocaml_symbols.ml  demangle_ocaml_symbols.mli  dune  elf.ml  elf.mli  elf_intf.ml  env_vars.ml  env_vars.mli  errno.mli  event.ml  event.mli  for_range.ml  for_range.mli  import.ml  new_trace_segment.ml  new_trace_writer.ml  new_trace_writer.mli  nonempty_vec.ml  nonempty_vec.mli  ocaml_exception_info.ml  ocaml_exception_info.mli  perf_capabilities.ml  perf_capabilities.mli  perf_ctlfd.ml  (+44 more)
src/perf_dlfilter/: dlfilter_stubs.c  dune  import.ml  perf_dlfilter.ml
test/: btree_rebalance_decode_error.perf  c_demo_sampling.ml  c_demo_sampling.perf  callstack_compression_test.ml  decode_errors.ml  demangle_ocaml_symbols.ml  demo_extra_events.ml  demo_sampling_with_branch_misses_and_cache_misses.perf  demo_with_branch_misses.perf  demo_with_branch_misses_and_cache_misses.perf  dune  exception_stairstep.ml  exception_stairstep.perf  exception_stairstep.traps  golang_exit.ml  golang_exit.perf  hello_world_userspace.ml  hello_world_userspace.mli  hello_world_userspace.perf  hello_world_with_kernel_tracing.ml  hello_world_with_kernel_tracing.perf  memmove_decode_error.perf  ocaml_async.ml  ocaml_async.perf  ocaml_demo_sampling.ml  ocaml_demo_sampling.mli  ocaml_demo_sampling.perf  ocaml_exceptions.ml  ocaml_exceptions.perf  ocaml_exceptions_poptrap_corner_case.perf  page_fault.ml  page_fault.mli  page_fault.perf  perf_script.ml  perf_script.mli  simple_gogo.ml  simple_gogo.perf  test.ml  test.mli  test_events_output.ml
test/sample-targets/c/: simpletest.c
test/sample-targets/long-running/: dune  long_running-help-for-review.org  long_running.ml
test/sample-targets/ocaml-raise/: dune  sample-help-for-review.org  sample.ml  sample.mli
test/sample-targets/variable-duration/: dune  variable_duration.ml
