opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://magic-trace.org"
bug-reports: "https://github.com/janestreet/magic-trace/issues"
dev-repo: "git+https://github.com/janestreet/magic-trace.git"
doc: "https://github.com/janestreet/magic-trace/wiki"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "4.14"}
  "async"
  "cohttp"
  "cohttp_static_handler"
  "core"
  "core_unix"
  "expect_test_helpers_async"
  "crunch"
  "ppx_jane"
  "shell"
  "dune"         {>= "2.0.0"}
  "owee"         {>= "0.6"}
  "re"           {>= "1.8.0"}
]
synopsis: "Collects and displays high-resolution traces of what a process is doing"
description: "https://github.com/janestreet/magic-trace"
