(rule
 (targets perf_dlfilter.ml)
 (deps
  (:dep perf_dlfilter.c))
 (action
  (progn
   (run mkdir -p dlfilter)
   (run %{bin:gcc} -c -fpic %{dep})
   (run %{bin:gcc} -shared -o dlfilter/perf_dlfilter.so perf_dlfilter.o)
   (run %{bin:ocaml-crunch} -m plain dlfilter -o perf_dlfilter.ml))))

(library
 (name magic_trace_lib)
 (public_name magic-trace.magic_trace_lib)
 (foreign_stubs
  (language c)
  (names breakpoint_stubs boot_time_stubs ptrace_stubs))
 (libraries core async core_unix.filename_unix fzf re shell
   core_unix.sys_unix cohttp cohttp_static_handler core_unix.signal_unix
   tracing magic_trace magic_trace_core)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))
