opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/fzf"
bug-reports: "https://github.com/janestreet/fzf/issues"
dev-repo: "git+https://github.com/janestreet/fzf.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/fzf/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core_kernel"
  "ppx_jane"
  "dune"        {>= "2.0.0"}
]
synopsis: "A library for running the fzf command line tool"
description: "
A library for running the fzf command line fuzzy matcher
"
