opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml-probes"
bug-reports: "https://github.com/janestreet/ocaml-probes/issues"
dev-repo: "git+https://github.com/janestreet/ocaml-probes.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml-probes/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.11.0"}
  "dune" {>= "2.0.0"}
  "owee"
]
synopsis: "USDT probes for OCaml: command line tool"
description: "
A tool for controlling user-space statically-defined tracing probes for OCaml.
Experimental.
"
