opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/tracing"
bug-reports: "https://github.com/janestreet/tracing/issues"
dev-repo: "git+https://github.com/janestreet/tracing.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/tracing/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "dune"        {>= "2.0.0"}
]
synopsis: "Tracing library"
description: "
Utilities for creating and parsing traces in Fuchsia Trace Format.
"
